fixed contact spacing

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ h1, h3, p {
     body {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
         height: 100vh;
         margin: 0%;
         padding: 3% 10%;
@@ -83,7 +83,7 @@ h1, h3, p {
     body {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
         height: 100vh;
         margin: 0%;
         padding: 3% 10%;
@@ -159,7 +159,6 @@ h1, h3, p {
         display: flex;
         flex-direction: column;
         margin-top: 5%;
-        margin-bottom: 0%;
     }
     
     .host-entry {
@@ -211,7 +210,7 @@ h1, h3, p {
     padding: 8px;
     border-radius: 4px;
     justify-content: center;
-    margin-top: 0;
+    margin-top: 5%;
 }
 
 .contact {
